@@ -20,8 +20,20 @@ GTEST_CPPFLAGS_ = -I$(GTEST_DIR) -I$(GTEST_DIR)/include
 
 SUBDIRS = $(BOEHM_GC_DIR) $(ONIG_DIR) .
 
+bin_PROGRAMS = mosh test_vm
 
-COMMON_SOURCES_ = \
+# mosh
+# -O3 causes miss compile of NumberReader.tab.cpp.
+# see http://d.hatena.ne.jp/higepon/20081114/1226645373
+mosh_SOURCES  = main.cpp
+mosh_OPTS     = -D MONA_SCHEME -D USE_BOEHM_GC -Wall -D MOSH_LIB_PATH="\"@MOSH_LIB_PATH@\""
+mosh_CFLAGS   = -O3 $(mosh_OPTS)  -g -D_FILE_OFFSET_BITS=64 -Wall -momit-leaf-frame-pointer -fomit-frame-pointer -DDEBUG_VERSION
+mosh_CXXFLAGS = $(mosh_CFLAGS)
+mosh_LDADD = $(GC_LIB) $(REGEXP_LIB) libmosh.a
+
+noinst_LIBRARIES   = libmosh.a
+libmosh_a_CXXFLAGS = $(mosh_CFLAGS) $(mosh_OPTS) -I$(GTEST_DIR) -I$(GTEST_DIR)/include
+libmosh_a_SOURCES = \
 HeapObject.h                                                      \
 Object-inl.h                                                      \
 Pair-inl.h                                                        \
@@ -108,22 +120,12 @@ CodeBuilder.h                 CodeBuilder.cpp                     \
 FinxumProcedures.h            FixnumProcedures.cpp                \
 Latin1Codec.h                 Latin1Codec.cpp
 
-bin_PROGRAMS = mosh test_vm
-mosh_SOURCES = main.cpp $(COMMON_SOURCES_)
-
-mosh_OPTS     = -D MONA_SCHEME -D USE_BOEHM_GC -Wall -D MOSH_LIB_PATH="\"@MOSH_LIB_PATH@\""
-mosh_CFLAGS   = -O3 $(mosh_OPTS)  -g -D_FILE_OFFSET_BITS=64 -Wall -momit-leaf-frame-pointer -fomit-frame-pointer -DDEBUG_VERSION
-# -O3 causes miss compile of NumberReader.tab.cpp. see http://d.hatena.ne.jp/higepon/20081114/1226645373
-#mosh_CFLAGS   = -O2  $(mosh_OPTS) -pg  -D_FILE_OFFSET_BITS=64
-mosh_CXXFLAGS = $(mosh_CFLAGS)
 datadir = @MOSH_LIB_PATH@
 data_DATA = all-tests.scm repl.scm tools/psyntax-r6rs/rev10_to_10/psyntax.scm
 nobase_data_DATA = lib/srfi/%3A8.ss lib/srfi/%3A98.ss lib/srfi/%3A26.ss lib/mosh/test.ss
 
 PRECOMPILE_SRC   = compiler-with-library.scmc match.scmc psyntax.scmc
-mosh_LDADD = $(GC_LIB) $(REGEXP_LIB) #-lglog -lpthread
 
-# # generated files should be listed here.
 INCLUDES       = -I $(BOEHM_GC_DIR)/include -I $(ONIG_DIR)
 EXTRA_DIST     = instruction.scm vm.scm library.scm compiler.scm free-vars.scm scripts match.scm test-data.scm doc repl.scm tools/psyntax-r6rs/rev10_to_10/psyntax.scm r6rs-examples tools/psyntax-r6rs RELNOTE r6rs-test-suite example lib cprocedures.cpp labels.cpp all-tests.scm test
 
@@ -281,8 +283,8 @@ check_PROGRAMS=
 TESTS += test_vm
 check_PROGRAMS += test_vm
 test_vm_CXXFLAGS = $(mosh_CFLAGS) $(mosh_OPTS) -I$(GTEST_DIR) -I$(GTEST_DIR)/include -DGTEST_HAS_CLONE=0
-test_vm_SOURCES = TestVM.cpp TestingVM.cpp $(COMMON_SOURCES_)
-test_vm_LDADD = gtest_main.a $(GC_LIB) $(REGEXP_LIB)
+test_vm_SOURCES = TestVM.cpp TestingVM.cpp
+test_vm_LDADD = libmosh.a gtest_main.a $(GC_LIB) $(REGEXP_LIB)
 
 # doc:
 # 	@GOSH@ ./scripts/gen-doc.scm "manual" "doc/"
